# esp32_baresip

./: CMakeLists.txt  README.md
components/baresip/: CMakeLists.txt
components/baresip/include/: baresip.h
components/baresip/modules/i2s/: i2s.c  i2s.h  i2s_play.c  i2s_src.c
components/baresip/modules/webrtc_aec/: CMakeLists.txt  aec.cpp  aec.h  decode.cpp  encode.cpp
components/baresip/modules/webrtc_aec/include/modules/audio_processing/aec/: echo_cancellation.h
components/baresip/modules/webrtc_aec/webrtc/common_audio/signal_processing/: complex_fft_tables.h
components/baresip/modules/webrtc_aec/webrtc/modules/audio_processing/aec/include/: echo_cancellation.h
components/baresip/modules/webrtc_aec/webrtc/modules/audio_processing/ns/include/: noise_suppression_x.h
components/baresip/modules/webrtc_aecm/: aec.cpp  aec.h  signal_processing_library.h
components/baresip/src/: account.c  audio.c  conf.c  config.c  dial_number.c  module.c  net.c  static.c  ua.c  uag.c
components/re/: CMakeLists.txt
components/re/docs/: ChangeLog
components/re/include/: re_sys.h  re_tcp.h  re_udp.h
components/re/src/bfcp/: conn.c
components/re/src/conf/: conf.c
components/re/src/dns/: client.c  res.c
components/re/src/fmt/: unicode.c
components/re/src/hmac/: hmac_sha1.c
components/re/src/http/: client.c  server.c
components/re/src/main/: main.c  method.c
components/re/src/md5/: wrap.c
components/re/src/mod/: dl.c
components/re/src/mqueue/: mqueue.c
components/re/src/net/: ifaddrs.c  net.c  rt.c
components/re/src/net/posix/: pif.c
components/re/src/pcp/: reply.c  request.c
components/re/src/rtmp/: conn.c
components/re/src/rtp/: rtp.c
components/re/src/sa/: sa.c
components/re/src/sha/: wrap.c
components/re/src/sip/: transp.c
components/re/src/stun/: ctrans.c  stun.c
components/re/src/sys/: fs.c  sleep.c
components/re/src/tcp/: tcp.c  tcp_high.c
components/re/src/tls/openssl/: tls_udp.c
components/re/src/tmr/: tmr.c
components/re/src/trice/: tcpconn.c
components/re/src/turn/: turnc.c
components/re/src/udp/: udp.c
components/re/test/: rtcp.c  tcp.c  tls.c  turn.c  udp.c
components/re/test/mock/: dnssrv.c  stunsrv.c  turnsrv.c
main/: demo.c
